# edge-ai-suites

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  cli.py  config.yaml.example  monitor_cam_child.yaml  monitor_cam_fridge.yaml  monitors.yaml.example  package.json  pyproject.toml  service.py  source_worker.py  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: industrial-edge-insights-time-series-scans.yml  industrial-edge-insights-time-series-tests.yml
config/: config.yaml
demo-videos/: start-streams.sh  streams.yaml
demo-videos/cam_child/: child_safety_demo_groundtruth.srt
docker/: Dockerfile  docker-compose.yaml
docker/multilevel-video-understanding/: compose.yaml  set_env-dev.sh  set_env.sh
docs/: db-schema-design.md  dev_status.md  mcp-server-rampup-guide.md  smart_community_mcp_gsg.md  smartbuilding-video-design-2026.2.md  use-case-adapter-gsg.md  use-case-adapter.md  use-case-catalog.md  vlm-integration-gsg.md  vsa-gsg.md
manufacturing-ai-suite/: README.md
metro-ai-suite/: README.md
scripts/: test-videostream-analytics.sh
shared/: logger.py  webhook_client.py
sinks/: base.py  webhook.py
src/: app.py  config.py  main.py  source_manager.py
stream_monitor/: base_monitor.py  rtsp_monitor.py
tests/: conftest.py
tools/: eval_prefilter_from_webhook.py  render_eval_timeline.py  run_eval.sh
use-cases/: README.md
videos/: demo006-2_expanded_20min_v2_groundtruth.srt
videostream-analytics/: cli.py  service.py  source_worker.py
videostream_analytics/: __main__.py  cli.py  service.py  source_worker.py
(+550 files in other folders)
